--- a/waybar/style.css
+++ b/waybar/style.css
@@ -58,8 +58,8 @@ window#waybar.hidden {
 
 
 
-.modules-right { 
-    background: linear-gradient(to right, rgba(0, 4, 40, 0.75), rgba(0, 78, 146, 0.95));
+.modules-right {
+    background-color: #171717;
     border-radius: 20px;
 }
 
