--- a/mwww/style.css
+++ b/mwww/style.css
@@ -5,7 +5,7 @@
 }
 
 .widget {
-    -fx-background-color: #171717;
+    -fx-background-color: rgba(23, 23, 23, 0.85);
     -fx-background-radius: 20;
     -fx-alignment: center-left;
     -fx-spacing: 10px;
