--- a/themes/black_lamborgini/waybar/style.css
+++ b/themes/black_lamborgini/waybar/style.css
@@ -37,28 +37,24 @@ window#waybar.hidden {
     padding: 0 10px 0 10px;
     border-style: solid;
     border-width: 1px 0 1px 0;
-    border-color: rgb(80, 80, 80);
+    border-color: rgb(50, 50, 50);
 }
 
 #workspaces button:first-child {
     border-radius: 20px 0 0 20px;
     padding-left: 14px;
-    border-style: solid;
     border-width: 1px 0 1px 1px;
-    border-color: rgb(80, 80, 80);
 }
 
 #workspaces button:last-child {
     border-radius: 0 20px 20px 0;
     padding-right: 14px;
-    border-style: solid;
     border-width: 1px 1px 1px 0;
-    border-color: rgb(80, 80, 80);
 }
 
 #workspaces button:only-child {
     border-radius: 20px;
-    border: 1px solid rgb(80, 80, 80);
+    border-width: 1px;
 }
 
 #workspaces button.active {
@@ -70,7 +66,7 @@ window#waybar.hidden {
 
 .modules-right {
     background-color: black;
-    border: 1px solid rgb(80, 80, 80);
+    border: 1px solid rgb(50, 50, 50);
     border-radius: 20px;
 }
 
