--- a/mwww/style.css
+++ b/mwww/style.css
@@ -5,12 +5,8 @@
 }
 
 .widget {
-    -fx-background-color: black;
-    -fx-background-radius: 20px;
-    -fx-border-radius: 20px;
-    -fx-border-style: solid;
-    -fx-border-width: 1px;
-    -fx-border-color: rgb(50, 50, 50);
+    -fx-background-color: rgba(23, 23, 23, 0.82);
+    -fx-background-radius: 20;
     -fx-alignment: center-left;
     -fx-spacing: 10px;
     -fx-padding: 0 25px 0 20px;
