--- a/waybar/style.css
+++ b/waybar/style.css
@@ -27,7 +27,7 @@ window#waybar.hidden {
 
 
 #workspaces {
-    background-color: black;
+    background-color: rgba(23, 23, 23, 0.85);
     border-radius: 20px;
     font-size: 16px;
 }
@@ -35,26 +35,20 @@ window#waybar.hidden {
 #workspaces button {
     color: rgb(245, 245, 245);
     padding: 0 10px 0 10px;
-    border-style: solid;
-    border-width: 1px 0 1px 0;
-    border-color: rgb(50, 50, 50);
 }
 
 #workspaces button:first-child {
     border-radius: 20px 0 0 20px;
-    padding-left: 14px;
-    border-width: 1px 0 1px 1px;
+    padding-left: 14px; 
 }
 
 #workspaces button:last-child {
     border-radius: 0 20px 20px 0;
-    padding-right: 14px;
-    border-width: 1px 1px 1px 0;
+    padding-right: 14px;    
 }
 
 #workspaces button:only-child {
     border-radius: 20px;
-    border-width: 1px;
 }
 
 #workspaces button.active {
@@ -65,8 +59,7 @@ window#waybar.hidden {
 
 
 .modules-right {
-    background-color: black;
-    border: 1px solid rgb(50, 50, 50);
+    background-color: rgba(23, 23, 23, 0.85);
     border-radius: 20px;
 }
 
